fix: home page spacing

--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -3,7 +3,7 @@
   flex-direction: column;
   height: 100%;
   h1 {
-    margin-bottom: 63px;
+    margin-bottom: 1rem;
   }
   h2 {
     margin-bottom: 63px;
